kubernetes/ephemera/deploy-ephemera.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ephemera
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ephemera
      app.kubernetes.io/instance: ephemera
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ephemera
        app.kubernetes.io/instance: ephemera
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: ephemera
        image: ghcr.io/orwellianepilogue/ephemera:latest@sha256:a10b204c43de3a8e8aec8a7fe083af6c0aa042959484f2c833fcebf1270238ca
        ports:
        - containerPort: 8286
        volumeMounts:
        - mountPath: /app/data
          name: data
        - mountPath: /app/downloads
          name: downloads
        - mountPath: /app/ingest
          name: ingest
        livenessProbe:
          httpGet:
            path: /health
            port: 8286
          initialDelaySeconds: 40
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8286
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ephemera-data
      - name: downloads
        emptyDir: {}
      - name: ingest
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads/booklore-ingestion
