kubernetes/ephemera/service-ephemera.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: ephemera

spec:
  selector:
    app: ephemera
  ports:
  - port: 8286
    targetPort: 8286
