kubernetes/ephemera/service-flaresolverr.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: flaresolverr

spec:
  selector:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/instance: flaresolverr
  ports:
  - port: 8191
    targetPort: 8191
